--- a/style.css
+++ b/style.css
@@ -485,7 +485,51 @@ button {
   li {
     font-size: 15px;
   }
+  .header-section {
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 10px;
+  }
 
+  .logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  .header-section h1 {
+    font-size: 16px;
+    position: static;
+    transform: none;
+    margin: 0;
+    text-align: center;
+    flex: 1;
+  }
+
+  .navbar-toggler {
+    transform: scale(0.8);
+    margin-left: 5px;
+  }
+
+  .navbar-collapse {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #f8f8f8;
+    z-index: 1000;
+    border-top: 1px solid #ddd;
+  }
+
+  .navbar-nav {
+    flex-direction: column;
+    text-align: center;
+    margin: 0;
+    padding: 10px 0;
+  }
+
+  .navbar-nav .nav-link {
+    padding: 8px 0;
+  }
   .nav {
     flex-direction: column;
     align-items: center;
