--- a/style.css
+++ b/style.css
@@ -396,18 +396,17 @@ form label {
   font-family: 'Times New Roman', Times, serif;
 }
 
-.lazy {
-  filter: blur(3px);
-  opacity: 0.9;
-  transform: scale(0.98);
-  transition: filter 0.8s ease, opacity 0.8s ease, transform 0.8s ease;
+img.lazy {
+  opacity: 0;
+  transform: scale(0.97);
+  transition: opacity 1.5s ease-in-out, transform 1.5s ease-in-out;
 }
 
-.lazy.loaded {
-  filter: blur(0);
+img.lazy.loaded {
   opacity: 1;
   transform: scale(1);
 }
+
 
 
 /* =========================================
@@ -805,35 +804,46 @@ form label {
 /* =========================================
    STAR RATING STYLES
 ========================================= */
+.rating-container {
+  font-family: "Times New Roman", serif;
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 1.2s ease, transform 1.2s ease;
+}
+
+.rating-container.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .stars {
   display: inline-block;
 }
 
 .star {
-  font-size: 2.5rem;
+  font-size: 40px;
   color: #ccc;
   cursor: pointer;
-  transition: color 0.3s, transform 0.2s;
+  transition: color 0.3s ease, transform 0.3s ease;
+  opacity: 0;
+  transform: scale(0.8);
 }
 
-.star:hover {
-  transform: scale(1.1);
+.star.visible {
+  opacity: 1;
+  transform: scale(1);
+  transition: all 0.6s ease;
 }
 
-.star.active,
+.star:hover,
 .star.hovered {
   color: gold;
+  transform: scale(1.3);
 }
 
-#scrollProgress {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 8px;
-  width: 0%;
-  background: linear-gradient(90deg, #ffc1cc, #ffe5ec, #fff8f0);
-  z-index: 9999;
-  transition: width 0.2s ease;
+.star.selected {
+  color: gold;
+  transform: scale(1.1);
 }
 
 /* =========================================
@@ -969,4 +979,19 @@ body.dark-mode button:hover {
 
 .dark-mode .navbar-nav .nav-link:hover {
   color: #ffd700;
+}
+
+/* =========================================
+   Search
+========================================= */
+
+#searchBtn {
+  background-color: #db9898; 
+  border: none;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+#searchBtn:hover {
+  background-color: #BEB9C9; 
 }
